2297 [MediaInfo] fixed wrong aspect ratio in some cases


Changelog 2287 --> 2296

Features/Changes:
- added support for Apple TV & iPad in the MP4 muxer

Enhancements/Fixes:
[AVS Cutter] fixed not fading to black
[AVS Script Creator] fixed "Clever (TM) anamorphic encoding" if using "Encode non-mod 16"
[AVS Script Creator] removed "Successfully converted to YV12" message
[M2TS Muxer] disabled pure TrueHD as it is not supported by tsMuxeR
[OneClick] fixed some "index out of bounds" errors. Bug #703 + #707
[OneClick] only supported subtitle tracks will be added
[x264] fixed --crf and --partitions not set to default settings for new MeGUI installations


Changelog 2237 --> 2287

Features/Changes:
- enhanced AVS Script Creator (read details in the block below) 
- added BassAudioSource() as audio decoder
  the default order is now: NicAudio, BassAudio, FFAudioSource, DirectShow
- enhanced OneClick e.g. mux input files into MKV if possible for better audio/video processing support

Enhancements/Fixes:
[Adaptive Muxer] fixed handling of the "and close" button
[Audio Encoding Window] cosmetics
[Audio] changed default value of the normalization to disabled
[AVS Script Creator] added "Aspect Ratio Error"
[AVS Script Creator] added option to enable upsizing in the profile (disabled by default)
[AVS Script Creator] added option to select the default mod value in the profile (mod16 by default)
[AVS Script Creator] adjusted "Clever (TM) anamorphic encoding" so the new mod values are used
[AVS Script Creator] always show the correct output resolution when not resizing
[AVS Script Creator] even with upsizing allowed the default resolution will use no upsizing
[AVS Script Creator] moved "acceptable aspect error" setting into the AviSynth profile (1% by default)
[AVS Script Creator] resize is enabled by default in the profiles (only for new profiles)
[AVS Script Creator] suggest resolution is automatically pre-selected when doing a resize