@@ -1,3 +1,12 @@
+2296 [x264] fixed --crf and --partitions not set to default settings for new MeGUI installations
+2295 [OneClick] fixed some "index out of bounds" errors. Bug #703 + #707
+2294 [OneClick] only supported subtitle tracks will be added
+2293 [AVS Script Creator] fixed "Clever (TM) anamorphic encoding" if using "Encode non-mod 16"
+2292 [AVS Cutter] fixed not fading to black
+2291 [M2TS Muxer] disabled pure TrueHD as it is not supported by tsMuxeR
+2290 [AVS Script Creator] removed "Successfully converted to YV12" message
+2289 [OneClick] fixed error when opening some files. Bug #703
+2288 [MP4 Muxer] added support for Apple TV & iPad
 2287 [HD Streams Extractor] log adjustments for eac3to 3.25+
      [HD Streams Extractor] + [MP4 Muxer] fixed wrong detection of errors if file name contains "error"
 2286 [OneClick] lowered default priority of the DGA indexer
